# moex-access

./: README.md  cross_val_func.py  darts_exampl.ipynb  plot_test.py  pyproject.toml  rep_history_stoks.py  rep_sngsp.py  rep_tqbr.py  requirements.txt  sberp_analysis.py  t.ipynb
data/: sber_stocks.csv  sber_stocks.xlsx  sber_stocks_Y.csv  sber_stocks_Y.xlsx  sberp.csv  sberp.xlsx  sberp_20241119.csv  sberp_20241119_nov.csv  tqbr_shares.csv
