[tool.poetry]
name = "moex-access"
version = "0.1.0"
description = ""
authors = ["nichnikov <a.nichnikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
apimoex = "^1.4.0"
pandas = "^2.2.2"
requests = "^2.32.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
pyqt5 = "^5.15.11"
statsmodels = "^0.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
